--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prep2Crack is a site to share interview experience.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
